# SignDex

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: deploy-api.yml  deploy-web.yml  desktop-release.yml
api/: .env.example  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  run_dev.py
api/assets/: LISEZMOI-apple-mail.txt  LISEZMOI-signatures.txt  fake_mail_preview.html
api/core/: database.py  security.py  win32_asyncio.py
api/migrations/: 001_initial.sql  002_clients_firstname_lastname.sql  003_clients_title.sql  004_organizations.sql  005_organizations_show_chambers.sql  006_users_and_branding.sql  007_org_default_theme.sql  008_office_addresses.sql  009_password_reset.sql  010_lexial_show_chambers.sql  011_office_city_url_and_show_phone.sql  run_migrations.py
api/models/: __init__.py  client.py  generated_deliverable.py  organization.py  user.py
api/routes/: access.py  auth.py  clients.py  generate.py  organizations.py  portal.py  render.py  services.py  templates.py
api/schemas/: auth.py  clients.py  deliverable.py  organizations.py  service_deliverable.py
api/scripts/: host_lexial_assets.py  preview_lexial.py  qa_render.py  rebuild_apple_mail_from_html.py  seed_lexial_org.py
api/seeders/: auth_seeder.py  conditional_seed.py  (+1 more)
hellopropre-email-sign/: LISEZMOI-signatures.txt
web/: nuxt.config.ts  package-lock.json  package.json
web/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+96 files in other folders)
