[package]
name = "signdex-desktop"
version = "0.1.0"
description = "SignDex Desktop (Nuxt + Tauri)"
authors = ["SignDex"]
edition = "2021"

[lib]
name = "signdex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

